concat and uglify tasks

--- a/src/index.html
+++ b/src/index.html
@@ -176,7 +176,7 @@
                 <div class="slider__slide slide--first">
                   <table class="price-table">
                     <tr>
-                      <th colspan="2" class="price-table__caption">Стандарт <span>3,99 USD</span></th>
+                      <th class="price-table__caption">Стандарт <span>3,99 USD</span></th>
                     </tr>
                     <tr>
                       <td>Розовый фильтр <span class="check"><i class="checked">есть</i></span></td>
@@ -192,7 +192,7 @@
                 <div class="slider__slide slide--second">
                   <table class="price-table">
                     <tr>
-                      <th colspan="2" class="price-table__caption price-table__caption--flag">Стандарт <span>3,99 USD</span></th>
+                      <th class="price-table__caption price-table__caption--flag">Стандарт <span>3,99 USD</span></th>
                     </tr>
                     <tr>
                       <td>Розовый фильтр <span class="check"><i class="checked">есть</i></span></td>
@@ -208,7 +208,7 @@
                 <div class="slider__slide slide--third">
                   <table class="price-table">
                     <tr>
-                      <th colspan="2" class="price-table__caption">Стандарт <span>3,99 USD</span></th>
+                      <th class="price-table__caption">Стандарт <span>3,99 USD</span></th>
                     </tr>
                     <tr>
                       <td>Розовый фильтр <span class="check"><i class="checked">есть</i></span></td>
@@ -227,10 +227,6 @@
           <div class="container">
             <div class="hidden-xs">
               <table class="price-table price-table--big">
-                <col width="25%">
-                <col width="25%">
-                <col width="25%">
-                <col width="25%">
                 <tr>
                   <th class="price-table__caption--null"></th>
                   <th class="price-table__caption">База<span>1,99 USD</span></th>
@@ -297,7 +293,7 @@
             50,50
             100,0 
             0,0 
-            0,0">
+            0,0"></polygon>
         </svg>
         <div class="map" id="js-map">
           
@@ -335,7 +331,6 @@
     </footer>
   </div>
   <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
-  <script src="js/jquery-2.1.3.min.js"></script>
   <script src="js/script.min.js"></script>
 <!--
   <script src="_assets/jquery.pixlayout.js"></script>
