--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,12 @@
                   <div class="col-md-4 col-md--pl0">
                     <div class="features__item">
                       <div class="features__img">
-                        <img src="img/iphone-screen-3-1@1x.png" height="302" width="292" alt="">
+                        
+                          <img src="img/iphone1-1x.png" alt="" 
+                              width="292"
+                            srcset="img/iphone1-2x.png 2x"
+                          >
+                    
                       </div>
                       <strong class="features__caption">Поднимает настроение</strong>
                       <p>Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
@@ -83,7 +88,11 @@
                   <div class="col-md-4 col-md--pl0">
                     <div class="features__item">
                       <div class="features__img">
-                        <img src="img/iphone-screen-3-2@1x.png" height="302" width="292" alt="">
+                        <img src="img/iphone2-1x.png"
+                             width="292" height="302"
+                          srcset="img/iphone2-1x.png 1x,
+                                  img/iphone2-2x.png 2x"
+                        alt="">
                       </div>
                       <strong class="features__caption">Меняет мир вокруг</strong>
                       <p>Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
@@ -92,7 +101,11 @@
                   <div class="col-md-4 col-md--pl0">
                     <div class="features__item">
                       <div class="features__img">
-                        <img src="img/iphone-screen-3-3@1x.png" height="302" width="292" alt="">
+                        <img src="img/iphone3-1x.png"
+                            width="292" height="302"
+                          srcset="img/iphone3-1x.png 1x,
+                                  img/iphone3-2x.png 2x"
+                        alt="">
                       </div>
                       <strong class="features__caption">Заводит новых друзей</strong>
                       <p>Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
@@ -103,12 +116,11 @@
             </div>
             <div class="col-sm-6 visible-xs visible-sm col-md--pl0">
               <div class="features__mob-img">
-                <img alt="" 
-                  src="img/mob.png"
-                  srcset="img/mob.png 200w,
-                    img/iphone-screen-2-3@1x.png 700w,
-                    img/iphone-screen-2-3@2x.png 1200w"
-                  sizes="(min-width: 600px) 50vw : 100vw">
+                <img src="img/iphone-sm-1x.png" alt="" 
+                  srcset="img/iphone-sm-1x.png 1x,
+                          img/iphone-sm-2x.png 2x"
+                  sizes="100vw"
+                >
               </div>
             </div>
           </div>
@@ -119,7 +131,7 @@
           <div class="row">
             <div class="col-sm-6 col-md-5 col-lg-4">
               <div class="effect__timer">
-                <svg version="1" xmlns="http://www.w3.org/2000/svg" width="260.644" height="301.835" viewBox="0 0 260.644 301.835"><path d="M256.317 138.176c-4.76-18.067-13.292-34.604-24.73-48.707l7.495-7.49c5.312-5.315 5.312-13.932 0-19.242-2.916-2.92-6.805-4.072-10.61-3.79-3.143.224-6.248 1.397-8.628 3.79l-7.49 7.487c-7.943-6.433-16.687-11.854-26.006-16.292-8.412-3.985-17.275-7.167-26.535-9.332-.078-.013-.18-.013-.27-.03-4.014-.934-8.053-1.737-12.214-2.287v-8.256h6.016c9.392 0 17.01-7.618 17.01-17.032 0-9.38-7.618-16.994-17.01-16.994H106.26c-1.5 0-2.936.254-4.34.61 0 0-.007.025-.016.025-7.282 1.926-12.65 8.497-12.65 16.36 0 9.413 7.618 17.03 17.006 17.03h7.052v8.257c-43.81 5.715-80.66 33.232-99.584 71.238-3.778 7.572-6.903 15.52-9.144 23.823C1.614 148.238 0 159.67 0 171.507c0 56.342 35.818 104.22 85.912 122.402 13.882 5.015 28.796 7.925 44.408 7.925 6.503 0 12.89-.49 19.112-1.43.667-.083 1.3-.28 1.97-.393 18.337-3.002 35.447-9.77 50.375-19.585 20.617-13.554 37.065-32.768 47.302-55.442 7.366-16.356 11.563-34.396 11.563-53.48 0-11.516-1.508-22.682-4.326-33.33zM198.41 239.602c-12.416 12.41-27.623 20.884-44.205 25.133-5.686 1.422-11.595 2.194-17.552 2.594-.85.052-1.645.2-2.488.21-1.29.063-2.55.26-3.845.26-3.537 0-7.053-.227-10.525-.602-21.743-2.358-41.883-11.903-57.572-27.596-18.188-18.187-28.214-42.38-28.214-68.095 0-2.036.173-4.02.29-6.032 1.453-23.453 11.166-45.325 27.923-62.07 2.084-2.076 4.265-4.022 6.49-5.893l.015-.013C86 83.085 107.543 75.195 130.32 75.195c4.162 0 8.257.285 12.29.812 12.65 1.638 24.706 5.75 35.636 12.034.12.072.25.162.358.244 7.128 4.15 13.816 9.138 19.806 15.116 1.407 1.417 2.684 2.916 3.98 4.4.046.046.09.104.145.16 2.646 3.015 5.01 6.248 7.252 9.523 1.426 2.136 2.855 4.28 4.106 6.5 7.736 13.512 12.114 28.732 12.582 44.667.034.952.134 1.878.134 2.853-.002 25.717-10.01 49.91-28.2 68.097z"/></svg>
+                <svg version="1" xmlns="http://www.w3.org/2000/svg" width="260.644" height="301.835" viewBox="0 0 260.644 301.835"><path d="M256.317 138.176c-4.76-18.067-13.292-34.604-24.73-48.707l7.495-7.49c5.312-5.315 5.312-13.932 0-19.242-2.916-2.92-6.805-4.072-10.61-3.79-3.143.224-6.248 1.397-8.628 3.79l-7.49 7.487c-7.943-6.433-16.687-11.854-26.006-16.292-8.412-3.985-17.275-7.167-26.535-9.332-.078-.013-.18-.013-.27-.03-4.014-.934-8.053-1.737-12.214-2.287v-8.256h6.016c9.392 0 17.01-7.618 17.01-17.032 0-9.38-7.618-16.994-17.01-16.994H106.26c-1.5 0-2.936.254-4.34.61 0 0-.007.025-.016.025-7.282 1.926-12.65 8.497-12.65 16.36 0 9.413 7.618 17.03 17.006 17.03h7.052v8.257c-43.81 5.715-80.66 33.232-99.584 71.238-3.778 7.572-6.903 15.52-9.144 23.823C1.614 148.238 0 159.67 0 171.507c0 56.342 35.818 104.22 85.912 122.402 13.882 5.015 28.796 7.925 44.408 7.925 6.503 0 12.89-.49 19.112-1.43.667-.083 1.3-.28 1.97-.393 18.337-3.002 35.447-9.77 50.375-19.585 20.617-13.554 37.065-32.768 47.302-55.442 7.366-16.356 11.563-34.396 11.563-53.48 0-11.516-1.508-22.682-4.326-33.33zM198.41 239.602c-12.416 12.41-27.623 20.884-44.205 25.133-5.686 1.422-11.595 2.194-17.552 2.594-.85.052-1.645.2-2.488.21-1.29.063-2.55.26-3.845.26-3.537 0-7.053-.227-10.525-.602-21.743-2.358-41.883-11.903-57.572-27.596-18.188-18.187-28.214-42.38-28.214-68.095 0-2.036.173-4.02.29-6.032 1.453-23.453 11.166-45.325 27.923-62.07 2.084-2.076 4.265-4.022 6.49-5.893l.015-.013C86 83.085 107.543 75.195 130.32 75.195c4.162 0 8.257.285 12.29.812 12.65 1.638 24.706 5.75 35.636 12.034.12.072.25.162.358.244 7.128 4.15 13.816 9.138 19.806 15.116 1.407 1.417 2.684 2.916 3.98 4.4.046.046.09.104.145.16 2.646 3.015 5.01 6.248 7.252 9.523 1.426 2.136 2.855 4.28 4.106 6.5 7.736 13.512 12.114 28.732 12.582 44.667.034.952.134 1.878.134 2.853-.002 25.717-10.01 49.91-28.2 68.097z"></svg>
                 <span>24</span>
               </div>
             </div>
