--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,11 @@
     document.documentElement.className =
        document.documentElement.className.replace("no-js","js");
   </script>
+  <script>
+    // Picture element HTML5 shiv
+    document.createElement( "picture" );
+  </script>
+  <script src="js/picturefill.min.js" async></script>
   <noscript><link href="css/grunticon-icons.fallback.css" rel="stylesheet"></noscript>
 </head>
 <body>
@@ -74,12 +79,11 @@
                   <div class="col-md-4 col-md--pl0">
                     <div class="features__item">
                       <div class="features__img">
-                        
-                          <img src="img/iphone1-1x.png" alt="" 
-                              width="292"
-                            srcset="img/iphone1-2x.png 2x"
-                          >
-                    
+                        <img src="img/iphone1-1x.png" alt="" 
+                           width="292"
+                          srcset="img/iphone1-1x.png,
+                                  img/iphone1-2x.png 2x"
+                        >
                       </div>
                       <strong class="features__caption">Поднимает настроение</strong>
                       <p>Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
@@ -88,11 +92,11 @@
                   <div class="col-md-4 col-md--pl0">
                     <div class="features__item">
                       <div class="features__img">
-                        <img src="img/iphone2-1x.png"
+                        <img src="img/iphone2-1x.png" alt=""
                              width="292" height="302"
                           srcset="img/iphone2-1x.png 1x,
                                   img/iphone2-2x.png 2x"
-                        alt="">
+                        >
                       </div>
                       <strong class="features__caption">Меняет мир вокруг</strong>
                       <p>Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
@@ -101,11 +105,11 @@
                   <div class="col-md-4 col-md--pl0">
                     <div class="features__item">
                       <div class="features__img">
-                        <img src="img/iphone3-1x.png"
+                        <img src="img/iphone3-1x.png" alt=""
                             width="292" height="302"
                           srcset="img/iphone3-1x.png 1x,
                                   img/iphone3-2x.png 2x"
-                        alt="">
+                        >
                       </div>
                       <strong class="features__caption">Заводит новых друзей</strong>
                       <p>Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
@@ -116,11 +120,16 @@
             </div>
             <div class="col-sm-6 visible-xs visible-sm col-md--pl0">
               <div class="features__mob-img">
-                <img src="img/iphone-sm-1x.png" alt="" 
-                  srcset="img/iphone-sm-1x.png 1x,
-                          img/iphone-sm-2x.png 2x"
-                  sizes="100vw"
-                >
+                <picture>
+                  <source media="(min-width: 700px)" 
+                          srcset="img/iphone-sm-2x.png, 
+                                  img/iphone-md-2x.png 2x">
+                  <source media="(min-width: 320px)" 
+                          srcset="img/iphone-sm-1x.png, 
+                                  img/iphone-sm-2x.png 2x,
+                                  img/iphone-md-2x.png 3x">
+                  <img src="img/iphone-sm-1x.png" alt="">
+                </picture>
               </div>
             </div>
           </div>
