scripts + modules, fixes

--- a/src/_preview.html
+++ b/src/_preview.html
@@ -98,7 +98,7 @@
 			
 		
 			
-			<pre><code>.icon-smiley-1:</code></pre><div class="icon-smiley-1" style="width: 77.082px; height: 77.082px;" ></div><hr/>
+			<pre><code>.icon-timer:</code></pre><div class="icon-timer" style="width: 260.644px; height: 301.835px;" ></div><hr/>
 			
 		
 			
